필요 라이브러리 추가

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "argon2-cffi>=25.1.0",
+    "authlib>=1.6.4",
     "fastapi[standard]>=0.116.1",
     "pyjwt>=2.10.1",
 ]
